fix anchor bug on IE

--- a/frontend/src/common/css/main.text.less
+++ b/frontend/src/common/css/main.text.less
@@ -1225,7 +1225,7 @@ img.emoji {
     .markdown-body a {
       color: #4183c4;
       text-decoration: none;
-      transition: all .4s ease;
+      //transition: all .4s ease;
       code {
         color: #4183c4;
       }
